arreglo internet, cambio logo

--- a/tele_taxi/android/app/src/main/res/drawable/launch_background.xml
+++ b/tele_taxi/android/app/src/main/res/drawable/launch_background.xml
@@ -7,6 +7,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/a" />
+            android:src="@mipmap/logon"/>
     </item> 
 </layer-list>
